about incompatibilities that affect your application/plug-in, 
so we can provide assistence in the transition to a new 
libFAUDES version.

##########

Relative to 2.31*

***

Tuning the build system for the migration to GitHub. This should
not affect libFAUDES aplications. For the time being, we recommend
to get the 2.31* from the FGDES/LRT/FAU download page and wait for
2.32* until stable.


##########

Relative to 2.30b

***

Performance improvements for Product (used in LanguageIntersection,
Languagedifference, and may more)

***

Bugfixes for IsLCC and  KleeneClosureNonDet

***

Re-design of compositional verification (incl. bugfixes)

##########

Relative to 2.27a

***

Various refinements to reflect compiler warnings raised
by recent LLVM/clangc++ 7.3.0. This mainly effects the
assignment methods of the faudes type hierarchy. 

*** 

Reworked serialisation basics to be strictly XML compliant
and to have a more consistent API. This should only affect
plug-ins that implement non-std-faudes token formats by
pre/post processing XML character data. Currently theese
are only the libFAUDES configuration tools ref2html and
flxinstall. Both have been updated accordingly.


##########

Relative to 2.26a

***

Re-design of the build process to use shared objects by default.
We use explicit decrlaration of exported/imported symbols by
the FAUDES_API macro. If you experience linkage errors, 
use FAUDES_API to export the missing symbol.

***

Re-design of the class hierarchy to circumvent diomond-shape 
inheritance relationships for attributed sets. The former construct 
also used covariant return types and templates, which caused serious 
issues when compiling with MS compilers. These changes only affect classes 
that used to first virtualy inherit TaBaseSet and TBaseSet, e.g,
TaNameSet. Further derivatives should not be affected as long as they
access child members not directly from TaBaseSet.

***

In course of the above redesign I dropped the prehistoric